# Sentiment-Analysis

./: .gitignore  README.md  connect.py  function.py  pyproject.toml
Training Model/: Test.py  agent.py  function.py
