[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["oPECHo <opecho0280@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
pandas = "2.2.2"
pythainlp = "5.0.4"
joblib = "1.4.2"
scikit-learn = "1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
